<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    tools:context=".LoginActivity">


    <TextView
        android:id="@+id/loginWelcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/black_han_sans"
        android:text="@string/loginWelcomeText"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loginAppNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/black_han_sans"
        android:text="@string/appNameText"
        android:textColor="@color/black"
        android:textSize="85sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginWelcomeText" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailEditText"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/loginAppNameText">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/emailEditText" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordEditText"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/emailEditText"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/passwordEditText" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/goLoginButton"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/loginEditTextColor"
        android:text="@string/loginText"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:icon="@drawable/ic_baseline_arrow_right_alt_24"
        app:iconGravity="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditText" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signUpButton"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/loginEditTextColor"
        android:text="@string/signUpText"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:icon="@drawable/ic_baseline_arrow_right_alt_24"
        app:iconGravity="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goLoginButton" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/forgetText"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/black_han_sans"
        android:text="@string/findIdPasswordText"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/googleLogin"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/loginbtn_background"
        app:backgroundTint="@color/black"
        android:text="@string/googleLoginText"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:icon="@drawable/google_icon"
        app:iconGravity="textStart"
        app:iconSize="26dp"
        app:iconTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/forgetText" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/faceBookLogin"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/loginbtn_background"
        app:backgroundTint="@color/black"
        android:text="@string/faceBookLoginText"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:icon="@drawable/facebook_icon"
        app:iconGravity="textStart"
        app:iconSize="30dp"
        app:iconTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/googleLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>