<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_color"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/signUpWelcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/black_han_sans"
        android:text="@string/loginWelcomeText"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/signUpAppNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/black_han_sans"
        android:text="@string/appNameText"
        android:textColor="@color/black"
        android:textSize="85sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpWelcomeText" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signUpNameEditText"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/signUpAppNameText">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nameEditText" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signUpEmailEditText"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/signUpNameEditText">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/emailEditText" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signUpPasswordEditText"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/signUpEmailEditText"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/passwordEditText" />
            android:hint="@string/passwordEditText"
            android:inputType="textPassword"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/signUpPasswordCheckEditText"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/signUpPasswordEditText"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signUpPasswordCheckEditText"
            android:inputType="textPassword"/>
            android:inputType="textPassword"
            android:hint="@string/signUpPasswordCheckEditText" />

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/signUpMakeButton"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/loginEditTextColor"
        android:text="@string/signUpMakeText"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:icon="@drawable/ic_baseline_arrow_right_alt_24"
        app:iconGravity="textEnd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpPasswordCheckEditText" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signUpGoogleLogin"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/loginbtn_background"
        android:text="@string/googleLoginText"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:backgroundTint="@color/black"
        app:icon="@drawable/google_icon"
        app:iconGravity="textStart"
        app:iconSize="26dp"
        app:iconTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpMakeButton" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signUpFaceBookLogin"
        android:layout_width="340dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/loginbtn_background"
        android:text="@string/faceBookLoginText"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textStyle="bold"
        app:backgroundTint="@color/black"
        app:icon="@drawable/facebook_icon"
        app:iconGravity="textStart"
        app:iconSize="30dp"
        app:iconTint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpGoogleLogin" />
</androidx.constraintlayout.widget.ConstraintLayout>